--- a/index.html
+++ b/index.html
@@ -45,19 +45,16 @@
                                 class="py-3 px-4 pe-9 block w-full border-gray-200 rounded-full text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
                                 id="criptomoneda"
                                 name="criptomoneda">
-                                <option selected="">Moneda</option>
-                                <option value="USD">
-                                    Dolar Estadounidense
-                                </option>
-                                <option value="MXN">Peso Mexicano</option>
-                                <option value="GBP">Libras</option>
-                                <option value="EUR">Euros</option>
+                                <option selected="">Criptomoneda</option>
+                                <option value="">Elige tu criptomoneda</option>
                             </select>
                             <div class="mx-auto mt-14">
                                 <input
                                     type="submit"
-                                    class="w-full px-4 py-2 text-sm text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2" />
+                                    class="w-full px-4 py-2 text-sm text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
+                                    value="cotizar" />
                             </div>
+                            <div id="resultado" class="resultado"></div>
                         </div>
                     </form>
                     <div class="mt-5 text-xs text-gray-400 lg:text-center">
