--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                                 class="block mb-2 font-bold text-sm font-medium text-black">
                                 Elige tu criptomoneda</label
                             >
+                            <!-- El select se rellena con las criptomonedas de la API -->
                             <select
                                 class="py-3 px-4 pe-9 block w-full border-gray-200 rounded-full text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                                id="criptomoneda"
-                                name="criptomoneda">
-                                <option selected="">Criptomoneda</option>
-                                <option value="">Elige tu criptomoneda</option>
+                                id="criptomonedas"
+                                name="criptomonedas">
+                                <option value="">Criptomoneda</option>
                             </select>
                             <div class="mx-auto mt-14">
                                 <input
@@ -82,5 +82,6 @@
                 </div>
             </div>
         </footer>
+        <script src="/js/app.js"></script>
     </body>
 </html>
