--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <div class="bg-gray-100">
+        <div class="bg-gray-100 container mx-auto">
             <section>
                 <div class="relative flex-col items-center p-8">
                     <div class="bg-white opacity-30"></div>
@@ -17,7 +17,7 @@
                             Cotizador de monedas<span class="block"> </span>
                         </p>
                     </div>
-                    <form class="max-w-sm mx-auto">
+                    <form class="max-w-sm mx-auto" id="formulario">
                         <div class="mt-10">
                             <label
                                 class="block mb-2 font-bold text-sm font-medium text-black">
@@ -46,7 +46,9 @@
                                 class="py-3 px-4 pe-9 block w-full border-gray-200 rounded-full text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
                                 id="criptomonedas"
                                 name="criptomonedas">
-                                <option value="">Criptomoneda</option>
+                                <option value="" disabled selected>
+                                    Criptomoneda
+                                </option>
                             </select>
                             <div class="mx-auto mt-14">
                                 <input
