--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Cotizar criptomonedas</title>
         <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
+        <link rel="stylesheet" href="/css/style.css" />
     </head>
 
     <body>
@@ -25,9 +26,11 @@
                             >
                             <select
                                 class="py-3 px-4 pe-9 block w-full border-gray-200 rounded-full text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                                id="moneda"
+                                id="monedas"
                                 name="moneda">
-                                <option selected="">Moneda</option>
+                                <option selected="" disabled selected>
+                                    Moneda
+                                </option>
                                 <option value="USD">
                                     Dolar Estadounidense
                                 </option>
@@ -45,7 +48,7 @@
                             <select
                                 class="py-3 px-4 pe-9 block w-full border-gray-200 rounded-full text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
                                 id="criptomonedas"
-                                name="criptomonedas">
+                                name="criptomoneda">
                                 <option value="" disabled selected>
                                     Criptomoneda
                                 </option>
@@ -54,7 +57,7 @@
                                 <input
                                     type="submit"
                                     class="w-full px-4 py-2 text-sm text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
-                                    value="cotizar" />
+                                    value="Cotizar" />
                             </div>
                             <div id="resultado" class="resultado"></div>
                         </div>
